--- a/src/style/App.css
+++ b/src/style/App.css
@@ -11,11 +11,19 @@
   box-sizing: border-box;
 }
 
-body {
+#root {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .title {
   margin: var(--s-2);
+}
+
+form {
+  margin: var(--s-4) 0;
+  display: flex;
+  flex-direction: column;
+  gap: var(--s-2);
 }
